# near-arbitrage

./: .gitignore  README.md  setup.md  test.md
contracts/arbitrage/: Cargo.toml  build.bat  build.sh
contracts/arbitrage/neardev/: dev-account  dev-account.env
contracts/arbitrage/src/: lib.rs  token_receiver.rs  utils.rs
contracts/factory/: build.bat
contracts/factory/ft-builds/: ft_faucet.wasm
contracts/factory/neardev/: dev-account  dev-account.env
contracts/factory/src/: lib.rs
contracts/ft/: Cargo.toml  build.bat
contracts/ft/res/: fungible_token_faucet.wasm
contracts/ft/src/: lib.rs
ui/: .env.example  .gitignore  LICENSE  next.config.js  package-lock.json  package.json
ui/src/: config.js
ui/src/components/common/: ImageUpload.jsx  NotLoggedIn.jsx  TableFTs.jsx
ui/src/components/layout/: AppBar.jsx  ResponsiveAppBar.jsx
ui/src/middleware/: postgres.js
ui/src/pages/: _app.jsx  _document.jsx  activities.jsx  index.jsx
ui/src/pages/api/: tokens.jsx
ui/src/pages/factory/: create.jsx  index.jsx  my-tokens.jsx
ui/src/public/static/css/: style.css
ui/src/state/: actions.js  app.js  near.js  provider.js  views.js
ui/src/utils/: near-utils.js
